--- a/Client/src/components/PopUp/components/InputPanel/InputPanel.module.scss
+++ b/Client/src/components/PopUp/components/InputPanel/InputPanel.module.scss
@@ -1,15 +1,8 @@
 .InputPanel{
     position: relative;
     display: flex;
-    margin: 40px 0;
+    margin: 30px 0 40px 0;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-}
-.InputRegistration{
-    position: relative;
-    width: 80%;
-    margin: 12px 0;
-    height: 40px;
-    font-size: 24px;
 }
