--- a/Client/src/components/InputPanel/Input/Input.module.scss
+++ b/Client/src/components/InputPanel/Input/Input.module.scss
@@ -6,14 +6,14 @@
     justify-content: center;
     padding: 0 10%;
     &_input{
-    position: relative;
-    width: 100%;
-    margin: 12px 0;
-    height: 40px;
-    font-size: 24px;
-    border-radius: 5px;
-    padding: 20px 0;
-    border: rgb(56, 56, 56) 2px solid;
+        position: relative;
+        width: 100%;
+        margin: 12px 0;
+        height: 40px;
+        font-size: 24px;
+        border-radius: 5px;
+        padding: 20px 3%;
+        border: rgb(56, 56, 56) 2px solid;
     }
     &_focus{
         border: rgb(245, 47, 47) 2px solid;
@@ -28,4 +28,16 @@
         font-size: 18px;
         font-weight: 800;
     }   
+}
+.PasswordEye{
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    padding-right: 15%;
+    &_icon{
+        height: 25px;
+        width: auto;
+        cursor: pointer;
+    }
 }
